new modal lwc, new schedule form moved to modal

--- a/force-app/main/default/lwc/batchFlow_pageHeader/batchFlow_pageHeader.html
+++ b/force-app/main/default/lwc/batchFlow_pageHeader/batchFlow_pageHeader.html
@@ -52,7 +52,7 @@
                     <div class="slds-page-header__control">
                         <ul class="slds-button-group-list">
                             <li>
-                                <button class="slds-button slds-button_neutral" onclick={handleNewSch}>New</button>
+                                <button class="slds-button slds-button_neutral" onclick={handleNewSch}>New Schedule</button>
                             </li>
                             <li>
                                 <div class="slds-dropdown-trigger slds-dropdown-trigger_click">
