--- a/force-app/main/default/lwc/batchFlow_monitorFlow/batchFlow_monitorFlow.html
+++ b/force-app/main/default/lwc/batchFlow_monitorFlow/batchFlow_monitorFlow.html
@@ -9,6 +9,19 @@
             >
             Delete
             </button>
+            <!-- <lightning-button-icon 
+                icon-name="utility:edit" 
+                variant="bare" 
+                onclick={handleDeleteFlow} 
+                alternative-text="Edit"
+            >
+            </lightning-button-icon> -->
+            <lightning-button-icon 
+                icon-name="utility:edit"  
+                alternative-text="Edit" 
+                title="Edit"
+            >
+            </lightning-button-icon>
             <span aria-hidden="true">
                 <strong>100% Complete</strong>
             </span>
