--- a/force-app/main/default/lwc/batchFlow_viewFlowSchedule/batchFlow_viewFlowSchedule.html
+++ b/force-app/main/default/lwc/batchFlow_viewFlowSchedule/batchFlow_viewFlowSchedule.html
@@ -1,7 +1,7 @@
 <template>
     <div>
         <div class="slds-grid slds-grid_align-spread slds-p-bottom_x-small" id="progress-bar-label-id-3">
-            <strong>{flowSchedule.Name}</strong>
+            <strong>{queryFlowSch.Name}</strong>
             <button 
                 class="slds-button slds-button_neutral" 
                 onclick={handleDeleteFlow} 
@@ -47,14 +47,6 @@
                 </div>
                 </article>
             </div>
-        </div>
-        <div class="slds-grid slds-grid_align-center slds-p-bottom_x-small slds-p-top_x-small">
-            <button 
-                class="slds-button slds-button_neutral slds-button_stretch" 
-                onclick={handleViewFlow} 
-                data-value={flowSchedule.Id}
-            >View
-            </button>
         </div>
     </div>
 </template>
