wired edit button to modal from viewflow component

--- a/force-app/main/default/lwc/batchFlow/batchFlow.html
+++ b/force-app/main/default/lwc/batchFlow/batchFlow.html
@@ -154,6 +154,7 @@
                         ondoneloading={handleDoneLoading}
                         ondeleteflow={handleDeleteFlow} 
                         flow-schedule={selectedFlow}
+                        oneditflow={handleLoading} 
                     >
                     </c-batch-flow_view-flow-schedule>
                 </div>
