--- a/force-app/main/default/lwc/batchFlow_viewFlowSchedule/batchFlow_viewFlowSchedule.html
+++ b/force-app/main/default/lwc/batchFlow_viewFlowSchedule/batchFlow_viewFlowSchedule.html
@@ -20,6 +20,8 @@
                 icon-name="utility:edit"  
                 alternative-text="Edit" 
                 title="Edit"
+                onclick={handleEditFlow}
+                data-value={flowSchedule.Id}
             >
             </lightning-button-icon>
             <span aria-hidden="true">
