edit flow now queries for selected record and populates modals name field

--- a/force-app/main/default/lwc/batchFlow/batchFlow.html
+++ b/force-app/main/default/lwc/batchFlow/batchFlow.html
@@ -33,7 +33,7 @@
                             label="Name"    
                             type="text" 
                             name="single-form-element-id-024224"
-                            value={name}
+                            value={newBatchFlowSchName}
                             onchange={handleNewBatchFlowSchNameChange}
                             placeholder="placeholder.."
                             required
@@ -154,7 +154,7 @@
                         ondoneloading={handleDoneLoading}
                         ondeleteflow={handleDeleteFlow} 
                         flow-schedule={selectedFlow}
-                        oneditflow={handleLoading} 
+                        oneditflow={handleEditFlow} 
                     >
                     </c-batch-flow_view-flow-schedule>
                 </div>
