--- a/force-app/main/default/lwc/batchFlow_monitorFlow/batchFlow_monitorFlow.html
+++ b/force-app/main/default/lwc/batchFlow_monitorFlow/batchFlow_monitorFlow.html
@@ -2,13 +2,13 @@
     <div>
         <div class="slds-grid slds-grid_align-spread slds-p-bottom_x-small" id="progress-bar-label-id-3">
             <strong>{flowSchedule.Name}</strong>
-            <button 
+            <!-- <button 
                 class="slds-button slds-button_neutral" 
                 onclick={handleDeleteFlow} 
                 data-value={flowSchedule.Id}
             >
             Delete
-            </button>
+            </button> -->
             <!-- <lightning-button-icon 
                 icon-name="utility:edit" 
                 variant="bare" 
@@ -16,12 +16,12 @@
                 alternative-text="Edit"
             >
             </lightning-button-icon> -->
-            <lightning-button-icon 
+            <!-- <lightning-button-icon 
                 icon-name="utility:edit"  
                 alternative-text="Edit" 
                 title="Edit"
             >
-            </lightning-button-icon>
+            </lightning-button-icon> -->
             <span aria-hidden="true">
                 <strong>100% Complete</strong>
             </span>
