--- a/force-app/main/default/lwc/batchFlow_viewFlowSchedule/batchFlow_viewFlowSchedule.html
+++ b/force-app/main/default/lwc/batchFlow_viewFlowSchedule/batchFlow_viewFlowSchedule.html
@@ -21,7 +21,7 @@
                 alternative-text="Edit" 
                 title="Edit"
                 onclick={handleEditFlow}
-                data-value={flowSchedule.Id}
+                data-value={queryFlowSch.Id}
             >
             </lightning-button-icon>
             <span aria-hidden="true">
