--- a/force-app/main/default/lwc/batchFlow_pageHeader/batchFlow_pageHeader.html
+++ b/force-app/main/default/lwc/batchFlow_pageHeader/batchFlow_pageHeader.html
@@ -24,7 +24,7 @@
                                 </h1>
                             </div>
                         </div>
-                        <p class="slds-page-header__name-meta">Nick Johnson • Unlimited Customer • 12/04/21</p>
+                        <p class="slds-page-header__name-meta">Nick Johnson • Salesforce.org Open Source Commons</p>
                         <!-- Object Home Page Header
                         <div class="slds-page-header__name">
                             <div class="slds-page-header__name-title">
@@ -52,7 +52,7 @@
                     <div class="slds-page-header__control">
                         <ul class="slds-button-group-list">
                             <li>
-                                <button class="slds-button slds-button_neutral" onclick={handleNewSch}>New Schedule</button>
+                                <button class="slds-button slds-button_neutral" onclick={handleNewSch}>Schedule</button>
                             </li>
                             <li>
                                 <div class="slds-dropdown-trigger slds-dropdown-trigger_click">
