--- a/force-app/main/default/lwc/batchFlow_jobGroup/batchFlow_jobGroup.html
+++ b/force-app/main/default/lwc/batchFlow_jobGroup/batchFlow_jobGroup.html
@@ -67,62 +67,6 @@
                                 </span>
                                 <span class="slds-pill slds-pill_link">
                                     <a href="#" class="slds-pill__action" title="Full pill label verbiage mirrored here">
-                                        <span class="slds-pill__label">ContactMonthlySync</span>
-                                    </a>
-                                    <button class="slds-button slds-button_icon slds-button_icon slds-pill__remove" title="Remove">
-                                        <lightning-icon
-                                            icon-name="utility:close"
-                                            size="small"
-                                            alternative-text="Close"
-                                        >
-                                        </lightning-icon>
-                                        <span class="slds-assistive-text">Remove</span>
-                                    </button>
-                                </span>
-                                <span class="slds-pill slds-pill_link">
-                                    <a href="#" class="slds-pill__action" title="Full pill label verbiage mirrored here">
-                                        <span class="slds-pill__label">ContactMonthlySync</span>
-                                    </a>
-                                    <button class="slds-button slds-button_icon slds-button_icon slds-pill__remove" title="Remove">
-                                        <lightning-icon
-                                            icon-name="utility:close"
-                                            size="small"
-                                            alternative-text="Close"
-                                        >
-                                        </lightning-icon>
-                                        <span class="slds-assistive-text">Remove</span>
-                                    </button>
-                                </span>
-                                <span class="slds-pill slds-pill_link">
-                                    <a href="#" class="slds-pill__action" title="Full pill label verbiage mirrored here">
-                                        <span class="slds-pill__label">ContactMonthlySync</span>
-                                    </a>
-                                    <button class="slds-button slds-button_icon slds-button_icon slds-pill__remove" title="Remove">
-                                        <lightning-icon
-                                            icon-name="utility:close"
-                                            size="small"
-                                            alternative-text="Close"
-                                        >
-                                        </lightning-icon>
-                                        <span class="slds-assistive-text">Remove</span>
-                                    </button>
-                                </span>
-                                <span class="slds-pill slds-pill_link">
-                                    <a href="#" class="slds-pill__action" title="Full pill label verbiage mirrored here">
-                                        <span class="slds-pill__label">ContactMonthlySync</span>
-                                    </a>
-                                    <button class="slds-button slds-button_icon slds-button_icon slds-pill__remove" title="Remove">
-                                        <lightning-icon
-                                            icon-name="utility:close"
-                                            size="small"
-                                            alternative-text="Close"
-                                        >
-                                        </lightning-icon>
-                                        <span class="slds-assistive-text">Remove</span>
-                                    </button>
-                                </span>
-                                <span class="slds-pill slds-pill_link">
-                                    <a href="#" class="slds-pill__action" title="Full pill label verbiage mirrored here">
                                         <span class="slds-pill__label">(10)BillingSync</span>
                                     </a>
                                     <button class="slds-button slds-button_icon slds-button_icon slds-pill__remove" title="Remove">
@@ -180,7 +124,7 @@
                 onselectionchange={handleSelectionChange}
                 selection={initialSelection}
                 onsearch={handleSearch}
-                label="Search"
+                label="Apex Batch Class"
                 is-multi-entry={isMultiEntry}
                 data-custom="My custom value"
             >
